# ECG-Viewer

./: .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: main.yml  nuitka-dylib-scan-tests.yml
src/ecgviewer/: client.py  filter.py  main.py  nuitka_tests.py  server.py  visualization.py
src/ecgviewer/assets/: style.css  tooltips.js
